# mandarinpath

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: backend.yml  ci.yml  e2e.yml  frontend.yml
app/: .env.example  CLAUDE.md  fresh_cookies.txt  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
app/public/: manifest.json
app/src/: App.vue
app/src/assets/: base.css  main.css
app/src/components/: AuthModal.vue  DesignSystemButton.vue  PageLayout.vue
app/src/router/: index.ts
app/src/services/: api.ts  auth.ts
app/src/stores/: tasks.ts  user.ts  vocabulary.ts
backend/: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  cookies.txt  rustfmt.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs  session.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  speech.rs
backend/src/middleware/: csrf.rs  mod.rs  security.rs
backend/src/speech/: iflytek.rs  mod.rs
backend/tests/: db_tests.rs  integration_tests.rs  realistic_integration_tests.rs  speech_tests.rs
landing/: CLAUDE.md  README.md  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
landing/.astro/: data-store.json  settings.json
tests/: .gitignore  README.md  package.json  playwright.config.ts
tests/config/: global-setup.ts  global-teardown.ts
tests/specs/: api-integration.spec.ts  auth.spec.ts  learning-tasks.spec.ts  navigation.spec.ts  speaking-practice.spec.ts
(+17 files in other folders)
