[package]
name = "mandarinpath-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.2"
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
secrecy = "0.8"
# Speech evaluation dependencies
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
url = "2.5"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
bytes = "1.5"
futures-util = "0.3"

[dev-dependencies]
axum-test = "14.7"
tokio-test = "0.4"
url = "2.5"
tempfile = "3.8"